[workspace]
members = [
  "kubi",
  "kubi-server",
  "kubi-shared",
  "kubi-logging",
  "kubi-pool"
]
default-members = ["kubi"]
resolver = "2"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[profile.dev.package.uflow]
opt-level = 3

[profile.dev.package.glium]
opt-level = 3

[profile.dev.package.bracket-noise]
opt-level = 3

[profile.dev.package.rayon]
opt-level = 3

#this is cursed as fuck
#enabling debug assertions here causes the game to abort
[profile.dev.package.android-activity]
debug-assertions = false

[patch.crates-io]
glium = { git = "https://github.com/glium/glium", rev = "a352c667" }
