[workspace]
members = [
  "kubi",
  "kubi-server",
  "kubi-shared",
  "kubi-logging",
]
default-members = ["kubi"]
resolver = "2"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[profile.dev.package.uflow]
opt-level = 3

[profile.dev.package.wgpu]
opt-level = 3

[profile.dev.package.wgpu-core]
opt-level = 3

[profile.dev.package.wgpu-hal]
opt-level = 3

[profile.dev.package.fastnoise-lite]
opt-level = 3

[profile.dev.package.rayon]
opt-level = 3

#this is cursed as fuck
#enabling debug assertions here causes the game to abort
[profile.dev.package.android-activity]
debug-assertions = false
