[package]
name = "kubi-mod-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
kubi-shared = { path = "../kubi-shared" }
mlua = { version = "0.9.7", features = ["luajit52", "macros", "vendored", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
simd-json = "0.13"
tar = "0.4"
anyhow = "1.0"
