[package]
name = "kubi-udp"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc"
anyhow = "1.0"
hashbrown = "0.13"
nohash-hasher = "0.2.0"
log = "0.4"

[dev-dependencies]
kubi-logging = { path = "../kubi-logging" }
