[package]
name = "kubi-ui"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
hashbrown = "0.14"
nohash-hasher = "0.2"
glam = "0.25"
fontdue = "0.8"
rect_packer = "0.2"
log = "0.4"

[features]
default = ["builtin_elements", "builtin_font"]
builtin_font = []
builtin_elements = []
#parallel = ["dep:rayon", "fontdue/parallel"]
